--- a/Estacionamiento_TP/css/estilo.css
+++ b/Estacionamiento_TP/css/estilo.css
@@ -1,152 +1,279 @@
-/*TABLA*/
+/*-------------------------------NAVEGACION INICIAL------------------------------------------------------------*/
+body{
 
-em {
-  font-style: italic; 
+	border-collapse: collapse;
+	background-image: url("fondo.jpg");
+	min-width:900px;
 }
 
-table {
-  background: #f5f5f5;
-  border-collapse: separate;
-  box-shadow: inset 0 1px 0 #fff;
-  font-size: 12px;
-  line-height: 24px;
-  margin: 30px auto;
-  text-align: left;
-  width: 800px;
-  color:#000;
-} 
-
-th {
-  background: url(http://jackrugile.com/images/misc/noise-diagonal.png), linear-gradient(#777, #444);
-  border-left: 1px solid #555;
-  border-right: 1px solid #777;
-  border-top: 1px solid #555;
-  border-bottom: 1px solid #333;
-  box-shadow: inset 0 1px 0 #999;
-  color: #fff;
-  font-weight: bold;
-  padding: 10px 15px;
-  position: relative;
-  text-shadow: 0 1px 0 #000;  
+div#cuerpo #sec_nav {
+    width: 100%;
+    height: 80px;
+    border: 1px solid #222;
+    background-color: #111;
+    background-image: linear-gradient(#444, #111);
+    border-radius: 6px;
+    padding:0px;
+    box-shadow: 0 1px 1px #777;
 }
 
-th:after {
-  background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
-  content: '';
-  display: block;
-  height: 25%;
-  left: 0;
-  margin: 1px 0 0 0;
-  position: absolute;
-  top: 25%;
+#sec_nav button {
+    float: left;
+    vertical-align: center;
+    padding: 30px 50px;
+    color: #fff;
+    text-transform: uppercase;
+    font: bold 12px Arial, Helvetica;
+    text-decoration: none;
+    background-color: #111;
+    background-image: linear-gradient(#444, #111);
+    border: 0px;
+    
+}
+
+#sec_nav button:hover{
+    color: #D8D8D8;
+}
+
+/*-------------------------------TABLA DE AUTOS---------------------------------------------------------------*/
+
+div.table-title {
+  overflow-y: scroll;
+  max-height: 500px;
+  width: 500px;
+  margin: auto;
+}
+
+.table-title h3 {
+   color: #fafafa;
+   font-size: 30px;
+   font-weight: 400;
+   font-style:normal;
+   font-family: "Roboto", helvetica, arial, sans-serif;
+   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+   text-transform:uppercase;
+}
+
+
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+
+.table-fill {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  height: 200px;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
   width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  animation: float 5s infinite;
+  font-family: "Roboto", helvetica, arial, sans-serif;
+}
+ 
+th {
+  color:#FFF;;
+  background:#4CAF50;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:12px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
 }
 
 th:first-child {
-  border-left: 1px solid #777;  
-  box-shadow: inset 1px 1px 0 #999;
+  border-top-left-radius:3px;
 }
-
+ 
 th:last-child {
-  box-shadow: inset -1px 1px 0 #999;
+  border-top-right-radius:3px;
+  border-right:none;
+}
+  
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:12px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:first-child {
+  border-top:none;
 }
 
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
 td {
-  border-right: 1px solid #fff;
-  border-left: 1px solid #e8e8e8;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #e8e8e8;
-  padding: 10px 15px;
-  position: relative;
-  transition: all 300ms;
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:12px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
 }
-
-td:first-child {
-  box-shadow: inset 1px 0 0 #fff;
-} 
 
 td:last-child {
-  border-right: 1px solid #e8e8e8;
-  box-shadow: inset -1px 0 0 #fff;
-} 
-
-tr {
-  background: url(http://jackrugile.com/images/misc/noise-diagonal.png);  
+  border-right: 0px;
 }
 
-tr:nth-child(odd) td {
-  background: #f1f1f1 url(http://jackrugile.com/images/misc/noise-diagonal.png);  
+th.text-left {
+  text-align: left;
 }
 
-tr:last-of-type td {
-  box-shadow: inset 0 -1px 0 #fff; 
+th.text-center {
+  text-align: center;
 }
 
-tr:last-of-type td:first-child {
-  box-shadow: inset 1px -1px 0 #fff;
-} 
-
-tr:last-of-type td:last-child {
-  box-shadow: inset -1px -1px 0 #fff;
-} 
-
-tbody:hover td {
-  color: transparent;
-  text-shadow: 0 0 3px #aaa;
+th.text-right {
+  text-align: right;
 }
 
-tbody:hover tr:hover td {
-  color: #444;
-  text-shadow: 0 1px 0 #fff;
+td.text-left {
+  text-align: left;
 }
 
-/*FIN TABLA*/
-
-body{
-  margin: 0 auto;
-  color:#f0f0f0;
-  background-image: url('http://imgview.info/download/20150705/auto-audi-a4-parking-lot-underground-2560x1600.jpg');
-  background-size: 1800px 1024px;
-  background-repeat: no-repeat;
-  font-family:'Open Sans',sans-serif;
+td.text-center {
+  text-align: center;
 }
 
-.CajaInicio {
-  width:700px;
-  margin:0 auto;
-  margin-top:8px;
-  margin-bottom:2%;
-  transition:opacity 1s;
-  text-align:center;
-  -webkit-transition:opacity 1s;
+td.text-right {
+  text-align: right;
 }
 
-
-.CajaInicio h1{
-   
-  padding:20px 0;
-  font-size:160%;
-  font-weight:300;
-  text-align:center;
-  color:#fff;
-}
-
-#button {
-    background-color: #202020; /* Green */
-    border: 1px solid white;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
+#boton_tabla{
+    float: left;
+    padding: 10px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    font: bold 10px Arial, Helvetica;
     text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius:5px;
+    background-color: #111;
+    background-image: linear-gradient(#444, #111);
+    border: 0px;
+    border-radius: 10px;
 }
 
-#button:hover {
-  border: 1px solid #FFFF99;
-  color: #808080;
-
-
+#boton_tabla:hover{
+    color: #D8D8D8;
 }
 
+/*------------------------------------------FORM LOGIN--------------------------------------------*/
+
+.login-page {
+  width: 360px;
+  max-height: 500px;
+  padding: 2% 0 0;
+  margin: auto;
+}
+.form {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  max-width: 360px;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: #43A047;
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 20px;
+  display: block;
+  vertical-align: bottom;
+  position: relative;
+}
+.form .message label {
+  color: #4CAF50;
+  text-decoration: none;
+}
+.container {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container:before, .container:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container .info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+.container .info span a {
+  color: #000000;
+  text-decoration: none;
+}
+.container .info span .fa {
+  color: #EF3B3A;
+}
+
+#usuario{
+  font-size: 10px;
+  float: right;
+  font-family: "Roboto", sans-serif;
+  color:#FFF;
+}
